<resources>
    <string name="app_name">Tugas_AKB_Sensor_10120201_IF5</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="nim_string">NIM : 10120201</string>
    <string name="nama_string">Nama: Ilham Ramdhan Putra Lesmana</string>
    <string name="kelas_string">Kelas: IF-5</string>
    <string name="email_string">Email : ilham.10120201@mahasiswa.unikom.ac.id</string>
    <string name="informasi">Aplikasi ini dapat menampilkan lokasi penguna dan dapat menampilkan 5 tempat restoran terdekat</string>
    <string name="foto">profil diri</string>
    <string name="google_map_key" tempalteMergeStrategy="preserve" translatable="false">AIzaSyBBCliOcALf8SNIy1uoa6EwZl8Hasw56y4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="keterangan1">Aplikasi Ini Di Bangun Menggunakan Google Api</string>
    <string name="keterangan2">Untuk Memenuhi Tugas AKB 2023</string>
</resources>