<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:gravity="center"
    android:orientation="vertical">
    <RelativeLayout android:id="@+id/page_splash_screen_ek1"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/selamat_datang"
            android:layout_width="wrap_content"
            android:layout_height="142dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:text="@string/selamat_datang"
            android:textColor="@color/dark_blue"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView android:id="@+id/gambar_splash"
            android:src="@drawable/gambar_splash"
            android:contentDescription="__img_gambar1"
            android:layout_below="@+id/selamat_datang"
            android:layout_width="337.28dp"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"/>
        <TextView android:id="@+id/keterangan1"
            android:fontFamily="@font/inter_regular"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:layout_below="@+id/gambar_splash"
            android:layout_width="307dp"
            android:layout_height="40dp"
            android:text="@string/keterangan1"
            />

        <TextView android:id="@+id/ayo_kita_masuk_ke_catatan_harian_anda"
            android:fontFamily="@font/inter_regular"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/dark_blue"
            android:layout_below="@+id/keterangan1"
            android:layout_width="306dp"
            android:layout_height="38dp"
            android:text="@string/keterangan2"
            />

    </RelativeLayout>
</LinearLayout>